Finally fixed all the crazy layout problems pertaining to image cards :D

--- a/app/assets/stylesheets/_layouts.scss
+++ b/app/assets/stylesheets/_layouts.scss
@@ -98,6 +98,7 @@
   grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
   grid-auto-rows: 1fr;
   gap: 2rem;
+  place-items: center;
   
   @media (max-width: 768px) {
     grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
@@ -129,7 +130,7 @@
 }
 
 .food-container {
-  width: 20%;
+  width: 10rem;
   height: fit-content;
   margin: 0 auto;
 }
@@ -199,6 +200,7 @@
     display: flex;
     flex-direction: column;
     min-width: 20%; // Fix overflow
+    width: 100%;
     flex: 1 0 auto;
     
     // Sizing (now controlled by grid)
